fixed media query, aligned most content, still need to fix width issues

--- a/main.css
+++ b/main.css
@@ -1,34 +1,37 @@
 body{
     height:100vh;
-    width:100vh;
-    background-color: lightblue;
+    width:100vw;
+    background-color: white;
 }
 
-/* header area */
-#app{
-    display:grid;
-    grid-template-columns: 100px 200px 300px 400px 200px;
-    grid-template-rows: 100px 200px 600px 200px;
-}
 /* portrait phone layout */
-@media only screen and(max-width:500px){
+@media screen and (max-width:500px){
+    
+    #app{
+        display: grid;
+        grid-template-columns: 500px;
+        grid-template-rows: 56px 35px 510px 20px;
+    }
 
     /* header area */
     #title{
-        background-color: darkblue;
-        grid-area:1/3/1/3;
+        background-color: rgb(166, 166, 255);
+        grid-area:1/1/1/1;
+        width:100vw;
     }
 
     #header{
-        grid-area:2/1/2/5;
-        background-color: darkblue;
-        width:100vh;
+        grid-area:2/1/2/1;
+        background-color: rgb(166, 166, 255);
+        width:100vw;
+        height:30px;
     }
 
     button{
+        grid-area:2/1/2/1;
         background-color: rgb(2, 80, 126);
-        padding: 10px 30px;
-        font-size: 20px;
+        padding: 5px px;
+        font-size: 10px;
         display: inline-block;
         text-align: center;
         border-radius: 4px;
@@ -36,15 +39,94 @@ body{
     }
     /* content area */
     #content{
-        grid-area:3/1/3/6;
-        display:grid;
-        grid-template-areas: auto;
-        background-color: rgb(252, 246, 246);
-        width:100%;
+        grid-area:3/1/3/1;
+        /* display:grid;
+        grid-template-columns:auto;
+        grid-template-rows:auto; */
+        background-color: white;
+        width:100vh;
         height:100vh;
-        align-items: center;
     }
 
-    /* footer area */
+    .image{
+        height:125px;
+        width:200px;
+    } 
 
+    .imageTitle{
+        color:white;
+        position: relative;
+        background-color: rgba(0, 0, 0, 0.274);
+        font-size:15px;
+        width:200px;
+        bottom:60px;
+    }
+    
+    .summary{
+        color: white;
+        background-color:rgba(0, 0, 0, 0.274);
+        font-size: 10px;
+        position: absolute;
+        bottom: 21px;
+        /* text-align: center; */
+        width:200px;
+    }
+    .fade{
+        -webkit-animation-duration: 1.5s;
+        animation:  fade;
+        animation-duration: 1.5s;
+    }
+    #slideshow{
+        position: relative;
+        margin:auto;
+    }
+    /* slideshow controls */
+    #next, #prev{
+        position: relative;
+        bottom:500px;
+        color:rgb(255, 255, 255);
+        font-size:30px;
+        font-weight:bold;
+        position:absolute;
+        top:50px;
+    }
+    
+    #next:hover, #prev:hover{
+        background-color:rgba(0, 0, 0, 0.247);
+    }
+    #next{
+        position: absolute;
+    
+        left:180px;
+    }
+    .navdots{
+        display:flex;
+        justify-content: center;
+        position:absolute;
+        bottom:10px;
+    }
+    .dot{
+        border-radius: 50%;
+        background-color: darkslategray;
+        margin: 0 2px;
+        padding:  2px 8px;
+    }
+    
+    .dotactive{
+        border-radius: 50%;
+        background-color: rgb(107, 179, 179);
+        margin: 0 2px;
+        padding:  8px 8px;
+    }
+    
+
+    /* footer area */
+    #footer{
+        grid-area:4/1/4/1;
+        background-color: rgb(166, 166, 255);
+        font-size: 10px;
+        /* text-align: center; */
+        width:100vw;
+        height:25px;
+    }
 }
